# compneuro_tools

./: .gitignore  README.md  Tutorial.md  fit_glm.py  pyproject.toml
src/compneuro_tools/: atlas_overlap.py  cluster_correction_mc.py  fit_glm.py  match_groups_in_table.py
src/compneuro_tools/atlases/: __init__.py  cole_anticevic.py  xtract.py  yeo.py
src/compneuro_tools/wscore_models/: binarize_wmaps.py  compute_wmaps.py  reg_to_norm_template.py
src/glm_neuroim/: fit_glm.py
