[project]
name = "glm-neuroim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nilearn>=0.11.1",
    "polars>=1.26.0",
    "scipy",
    "statsmodels>=0.14.4",
]


[project.scripts]
fit_glm = "glm_neuroim.fit_glm:main"
cluster_correction_mc = "glm_neuroim.cluster_correction_mc:main"


[tool.uv]
package = true
managed = true
