[project]
name = "compneuro-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nilearn>=0.11.1",
    "polars>=1.26.0",
    "scipy",
    "statsmodels>=0.14.4",
]


[project.scripts]
fit_glm = "compneuro_tools.fit_glm:main"
cluster_correction_mc = "compneuro_tools.cluster_correction_mc:main"
match_groups_in_table = "compneuro_tools.match_groups_in_table:main"


[tool.uv]
package = true
managed = true
